compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__errors__const_multiple_errors_invalid_unannotated_value.snap
---
source: compiler-core/src/type_/tests/errors.rs
expression: "const invalid_unannotated_value = [1, 2.0]\nconst invalid_everything: MyInvalidType = MyInvalidValue"
---
error: Type mismatch
  ┌─ /src/one/two.gleam:1:39
  │
1 │ const invalid_unannotated_value = [1, 2.0]
  │                                       ^^^

Expected type:

    Int

Found type:

    Float

error: Unknown type
  ┌─ /src/one/two.gleam:2:27
  │
2 │ const invalid_everything: MyInvalidType = MyInvalidValue
  │                           ^^^^^^^^^^^^^

The type `MyInvalidType` is not defined or imported in this module.

error: Unknown variable
  ┌─ /src/one/two.gleam:2:43
  │
2 │ const invalid_everything: MyInvalidType = MyInvalidValue
  │                                           ^^^^^^^^^^^^^^

The name `MyInvalidValue` is not in scope here.
